backend-deployment-copy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-backend
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: flask-backend
    spec:
      containers:
        - name: flask-backend
          image: 261331872489.dkr.ecr.ap-southeast-1.amazonaws.com/flask-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /liveness
              port: 8080
          readinessProbe:
            httpGet:
              path: /readiness
              port: 8080
          lifecycle:
            preStop:
              httpGet:
                path: /prestop
                port: 8080
        terminationGracePeriodSeconds: 30
