backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: flask-backend
    spec:
      containers:
        - name: flask-backend
          image: 736604829268.dkr.ecr.ap-northeast-2.amazonaws.com/test:backend-yolos5
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          command:  ["python", "app.py"]
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds:  10
      terminationGracePeriodSeconds:  30
      nodeSelector:
        eksnode:  node1
