frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: react-frontend
  template:
    metadata:
      labels:
        app: react-frontend
    spec:
      containers:
        - name: react-frontend
          image: 261331872489.dkr.ecr.ap-southeast-1.amazonaws.com/react-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
