plate-detection-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plate-detection
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plate-detection
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: plate-detection
    spec:
      containers:
        - name: plate-detection
          image: 736604829268.dkr.ecr.ap-northeast-2.amazonaws.com/test:secret-aicore10
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          command: ["python", "main.py"]
          readinessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
      terminationGracePeriodSeconds:  30
      nodeSelector:
        eksnode:  node1
