pose-estimation-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pose-estimation
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pose-estimation
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pose-estimation
    spec:
      containers:
        - name: pose-estimation
          image: 261331872489.dkr.ecr.ap-southeast-1.amazonaws.com/pose-estimation:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
