backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/healthcheck"
spec:
  type: NodePort
  selector:
     app: flask-backend
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
