plate-detection-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plate-detection-service
  annotations:
    # alb.ingress.kubernetes.io/healthcheck-path: "/?source="
spec:
  type: ClusterIP
  selector:
     app: plate-detection
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
