pose-estimation-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pose-estimation-service
  annotations:
    # alb.ingress.kubernetes.io/healthcheck-path: "/?source="
spec:
  type: ClusterIP
  selector:
     app: pose-estimation
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
